[ASP-5024]  Create lm-composed subproject (#395)
* ASP-5024 Start structuring lm-composed

* ASP-5024 Update Dockerfiles

* Update docker-compose

* ASP-5024 Add scripts

* ASP-5024 Update keycloak realm

* ASP-5024 Set slurmctld prolog and epilog

* ASP-5024 Create script to configure Slurm

* ASP-5024 Update the lm-composed project

* ASP-5024 Fix client_secret generation in Keycloak

* ASP-5024 Remove unused os dependency in job_example

* ASP-5024 Add README

* ASP-5024 Remove changes from LM-API

* ASP-5024 Organize docker-compose

* ASP-5024 Organize files in /etc directory

* ASP-5024 Send error messages to stderr in job_example

* ASP-5024 Add error handling to script

* ASP-5024 Add shlex to parse cmd arguments

* ASP-5024 Add error handling to simulator script

* ASP-5024 Remove headers that aren't needed

* ASP-5024 Fix command to add license

--- a/lm-api/Dockerfile
+++ b/lm-api/Dockerfile
@@ -16,6 +16,8 @@ FROM python:3.12-slim-bullseye as runner
 
 WORKDIR /app
 
+RUN apt update && apt install -y curl
+
 COPY --from=builder /app /app
 
 ENV PATH="/app/.venv/bin:$PATH"
