--- a/lm-api/pyproject.toml
+++ b/lm-api/pyproject.toml
@@ -29,6 +29,7 @@ pydantic = {version = "^2.8.2", extras = ["email"]}
 inflection = "^0.5.1"
 pendulum = {extras = ["test"], version = "^3.0.0"}
 pydantic-settings = "^2.3.1"
+pydantic-extra-types = "^2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6"
