--- a/lm-api/pyproject.toml
+++ b/lm-api/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-backend"
-version = "4.2.0"
+version = "4.2.1"
 description = "Provides an API for managing license data"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -29,6 +29,7 @@ pydantic = {version = "^2.8.2", extras = ["email"]}
 inflection = "^0.5.1"
 pendulum = {extras = ["test"], version = "^3.0.0"}
 pydantic-settings = "^2.3.1"
+pydantic-extra-types = "^2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6"
