ASP-5608 Update GitHub Action

--- a/.github/workflows/build_and_publish_docs.yaml
+++ b/.github/workflows/build_and_publish_docs.yaml
@@ -11,8 +11,8 @@ on:
       - 'lm-agent/lm_agent/**'
       - 'lm-api/lm_api/**'
       - 'lm-cli/lm_cli/**'
-    branches:
-      - 'main'
+    types:
+      - closed
 jobs:
   build:
     runs-on: ubuntu-latest
