[ASP-5608] Update documentation to include latest modifications (#405)
* ASP-5608 Update index.md

* ASP-5608 Update architecture.md

* ASP-5608 Update development.md

* ASP-5608 Add permissions section to LM API

* ASP-5608 Address comments from code review

* ASP-5608 Address second round of code review

* ASP-5608 Improve Armasec section

* ASP-5608 Update development.md with code review suggestions

* ASP-5608 Update dependencies

* ASP-5608 Add serve command to Makefile

* ASP-5608 Update Github Action

* ASP-6808 Add .gitignore

* ASP-5608 Update configuration file

* ASP-5608 Remove unused javascript file

* ASP-5608 Break down the documentation into several pages

* ASP-5608 Update GitHub Action

* ASP-5608 Update dependencies

* ASP-5608 Indent the booking deletion section

--- a/.github/workflows/build_and_publish_docs.yaml
+++ b/.github/workflows/build_and_publish_docs.yaml
@@ -7,7 +7,10 @@ name: Build Sphinx documentation
 on:
   pull_request:
     paths:
-      - 'docs/**'
+      - 'lm-docs/docs/**'
+      - 'lm-agent/lm_agent/**'
+      - 'lm-api/lm_api/**'
+      - 'lm-cli/lm_cli/**'
     types:
       - closed
 jobs:
@@ -27,12 +30,12 @@ jobs:
         uses: Gr1N/setup-poetry@v8
 
       - name: Build documentation
+        working-directory: lm-docs
         run: |
-          cd docs
           make docs
 
       - name: Deploy documentation
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/site
+          publish_dir: lm-docs/docs/site
