--- a/lm-docs/pyproject.toml
+++ b/lm-docs/pyproject.toml
@@ -7,9 +7,12 @@ license = "MIT"
 repository = "https://github.com/omnivector-solutions/license-manager"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.12"
 mkdocs-material = "^9.1.21"
-mkdocstrings = {extras = ["python"], version = "^0.22.0"}
+griffe-pydantic = "^1.1.0"
+griffe = "^1.5.1"
+mkdocstrings-python = "^1.12.2"
+pydantic = "^2.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
