--- a/lm-agent/pyproject.toml
+++ b/lm-agent/pyproject.toml
@@ -19,7 +19,7 @@ tabulate = "^0.8.9"
 sentry-sdk = ">=1.3.1,<3.0.0"
 py-buzz = "^3.2.1"
 pydantic-settings = "^2.3.3"
-apscheduler = "^3.10.4"
+apscheduler = "3.10.4"
 
 [tool.poetry.dev-dependencies]
 mypy = "^1.10.1"
