--- a/lm-agent/pyproject.toml
+++ b/lm-agent/pyproject.toml
@@ -21,7 +21,7 @@ py-buzz = "^3.2.1"
 pydantic-settings = "^2.3.3"
 apscheduler = "3.10.4"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 mypy = "^1.10.1"
 pytest = "^6.2.4"
 pytest-asyncio = "^0.15.1"
