Update Poetry to 2.1.2

--- a/lm-api/Dockerfile
+++ b/lm-api/Dockerfile
@@ -3,14 +3,13 @@ FROM python:3.12-slim-bullseye as builder
 WORKDIR /app
 
 RUN apt update && apt install -y curl libpq-dev gcc
-RUN pip install poetry==1.4.0
 
 COPY ./pyproject.toml ./poetry.lock /app
 
-RUN poetry config virtualenvs.in-project true \
-    && poetry install --no-root --no-dev \
+RUN pip install poetry==2.1.2 \
+    && poetry config virtualenvs.in-project true \
+    && poetry install --no-root --only main \
     && rm -rf "$POETRY_CACHE_DIR"
-
 
 FROM python:3.12-slim-bullseye as runner
 
