--- a/lm-simulator-api/Dockerfile-ci
+++ b/lm-simulator-api/Dockerfile-ci
@@ -4,12 +4,14 @@ WORKDIR /app
 
 RUN apt update && apt install -y curl libpq-dev gcc
 
-COPY ./pyproject.toml ./poetry.lock* /app/
+COPY ./pyproject.toml ./poetry.lock /app/
 
-RUN pip install poetry \
+RUN pip install poetry==2.1.2 \
     && poetry config virtualenvs.in-project true \
-    && poetry install --no-root \
+    && poetry install --no-root --with dev \
     && rm -rf "$POETRY_CACHE_DIR"
+
+ENV PATH="/app/.venv/bin:$PATH"
 
 COPY ./lm_simulator_api /app/lm_simulator_api
 
