--- a/lm-api/Dockerfile-ci
+++ b/lm-api/Dockerfile-ci
@@ -3,11 +3,15 @@ FROM python:3.12-slim-bullseye
 WORKDIR /app
 
 RUN apt update && apt install -y curl libpq-dev gcc
-RUN pip install poetry==1.4.0
 
 COPY ./pyproject.toml ./poetry.lock /app/
 
-RUN poetry install --no-root && rm -rf "$POETRY_CACHE_DIR"
+RUN pip install poetry==2.1.2 \
+    && poetry config virtualenvs.in-project true \
+    && poetry install --no-root --with dev \
+    && rm -rf "$POETRY_CACHE_DIR"
+
+ENV PATH="/app/.venv/bin:$PATH"
 
 COPY ./alembic /app/alembic
 COPY ./lm_api /app/lm_api
