--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -25,7 +25,7 @@ importlib-metadata = "<5.0"
 python-dotenv = "^1.0.1"
 pydantic-settings = "^2.3.4"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 mypy = "^1.10.0"
 plummet = "^1.1.0"
 pytest-random-order = "^1.0.4"
