--- a/lm-test/pyproject.toml
+++ b/lm-test/pyproject.toml
@@ -9,12 +9,12 @@ repository = "https://github.com/omnivector-solutions/license-manager"
 packages = [{include = "lm_test"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 license-manager-cli = {path = "../lm-cli"}
 py-buzz = "^3.2.1"
 httpx = "^0.23.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
 isort = "^5.10.1"
 mypy = "^0.961"
