build(deps): Bump h11 from 0.12.0 to 0.16.0 in /lm-cli
h11 is required by httpcore, httpcore is required by httpx, httpx is required by respx, so both httpx and respx needed to be bumped as well.

--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -20,7 +20,7 @@ loguru = "^0.6.0"
 py-buzz = "^3.2.1"
 typer = "^0.4.1"
 pendulum = "3.0.0b1"
-httpx = ">=0.22,<0.24"
+httpx = "^0.28.1"
 importlib-metadata = "<5.0"
 python-dotenv = "^1.0.1"
 pydantic-settings = "^2.3.4"
@@ -33,7 +33,7 @@ pytest-cov = "^3.0.0"
 pytest-responsemock = "^1.0.1"
 pytest-env = "^0.6.2"
 pytest-mock = "^3.6.0"
-respx = ">=0.20.1"
+respx = "^0.22.0"
 ruff = "^0.1.11"
 
 [tool.poetry.scripts]
