--- a/.github/workflows/publish_on_tag.yaml
+++ b/.github/workflows/publish_on_tag.yaml
@@ -17,6 +17,9 @@ on:
       - '[0-9]+.[0-9]+.[0-9]+b[0-9]+'
       - '[0-9]+.[0-9]+.[0-9]+rc[0-9]+'
 
+permissions:
+  contents: read
+
 jobs:
   build-publish:
     runs-on: ubuntu-latest
@@ -33,7 +36,7 @@ jobs:
         with:
           python-version: 3.12
   
-      - uses: Gr1N/setup-poetry@v8
+      - uses: Gr1N/setup-poetry@15821dc8a61bc630db542ae4baf6a7c19a994844 # v8
 
       - id: poetry-package-version
         name: Get project's version
@@ -84,7 +87,7 @@ jobs:
         with:
           python-version: 3.12
 
-      - uses: Gr1N/setup-poetry@v8
+      - uses: Gr1N/setup-poetry@15821dc8a61bc630db542ae4baf6a7c19a994844 # v8
 
       - id: poetry-package-version
         name: Get version of project from poetry
@@ -101,7 +104,7 @@ jobs:
           exit 1
 
       - name: Setup AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
         with:
           aws-access-key-id    : ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
@@ -109,7 +112,7 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
@@ -132,7 +135,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Snapcraft
-        uses: samuelmeuli/action-snapcraft@v2
+        uses: samuelmeuli/action-snapcraft@75db9a03f97072c02648bf8339bd4ac678fe2607 #v2
 
       - name: Install Jq
         run: sudo snap install jq --channel latest/stable
@@ -159,7 +162,7 @@ jobs:
         run: sudo snap install core24 --channel latest/stable
 
       - name: Set up LXD
-        uses: canonical/setup-lxd@v0.1.1
+        uses: canonical/setup-lxd@a3c85fc6fb7fff43fcfeae87659e41a8f635b7dd # v0.1.3
         with:
           channel: 5.21/stable
 
