--- a/lm-simulator-api/pyproject.toml
+++ b/lm-simulator-api/pyproject.toml
@@ -11,32 +11,35 @@ packages = [{ include = "lm_simulator_api" }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.111.0"
-pydantic = "^2.8.2"
-pydantic-settings = "^2.3.4"
-SQLAlchemy = {extras = ["mypy"], version = "^2.0.22"}
-uvicorn = "^0.30.1"
-requests = "^2.27.1"
-psycopg2 = "2.9.5"
-yarl = "^1.9.2"
-asyncpg = "^0.28"
-py-buzz = "^4.1.0"
+fastapi = {extras = ["all"], version = "^0.116.2"}
+pydantic = "^2.11.9"
+pydantic-settings = "^2.10.1"
+SQLAlchemy = {extras = ["mypy"], version = "^2.0.43"}
+uvicorn = "^0.35.0"
+requests = "^2.32.5"
+psycopg2 = "2.9.10"
+yarl = "^1.20.1"
+asyncpg = "^0.30.0"
+py-buzz = "7.2.0"
 toml = "^0.10.2"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^6.2.4"
-pytest-asyncio = "^0.15.1"
-pytest-cov = "^2.12.1"
-pytest-env = "^0.6.2"
-pytest-random-order = "^1.0.4"
-python-dotenv = "^1.0.1"
-ruff = "^0.5.7"
+pytest = "^8.2.0"
+pytest-asyncio = "^1.0.0"
+pytest-cov = "^7.0.0"
+pytest-env = "^1.0.0"
+pytest-random-order = "^1.2.0"
+python-dotenv = "^1.1.1"
+ruff = "^0.13.0"
 
 [tool.ruff]
+lint.select = ["I", "E", "F", "C"]
 line-length = 110
 
 [tool.pytest.ini_options]
 addopts = "-v --random-order --cov=lm_simulator_api --cov-report=term-missing --cov-fail-under=85"
+asyncio_mode = "auto"
 env = [
     "TEST_DATABASE_HOST: test-db",
     "TEST_DATABASE_USER: test-user",
