--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -27,7 +27,7 @@ pydantic-settings = "^2.11.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.18.0"
-plummet = "^1.1.0"
+plummet = { extras = ["time-machine"], version = "^1.1.0" }
 pytest-random-order = "^1.2.0"
 pytest-cov = "^7.0.0"
 pytest-responsemock = "^1.0.1"
