build(deps): Update dependencies in /lm-cli (#468)
* Update dependencies

* Fix plummet deps

--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -12,29 +12,29 @@ packages = [ { include = "lm_cli" } ]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pydantic = "^2.8.2"
-rich = "^11.2.0"
-pyperclip = "^1.8.2"
-python-jose = "^3.3.0"
-loguru = "^0.6.0"
-py-buzz = "^3.2.1"
-typer = "^0.4.1"
-pendulum = "3.0.0b1"
+pydantic = "^2.12"
+rich = "^14.2.0"
+pyperclip = "^1.11.0"
+python-jose = "^3.5.0"
+loguru = "^0.7.3"
+py-buzz = "^7.3.0"
+typer = "^0.19.2"
+pendulum = "3.1.0"
 httpx = "^0.28.1"
 importlib-metadata = "<5.0"
-python-dotenv = "^1.0.1"
-pydantic-settings = "^2.3.4"
+python-dotenv = "^1.1.1"
+pydantic-settings = "^2.11.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.10.0"
-plummet = "^1.1.0"
-pytest-random-order = "^1.0.4"
-pytest-cov = "^3.0.0"
+mypy = "^1.18.0"
+plummet = { extras = ["time-machine"], version = "^1.1.0" }
+pytest-random-order = "^1.2.0"
+pytest-cov = "^7.0.0"
 pytest-responsemock = "^1.0.1"
-pytest-env = "^0.6.2"
+pytest-env = "^1.0.0"
 pytest-mock = "^3.6.0"
 respx = "^0.22.0"
-ruff = "^0.1.11"
+ruff = "^0.13.0"
 
 [tool.poetry.scripts]
 lm-cli = "lm_cli.main:app"
