--- a/lm-agent/pyproject.toml
+++ b/lm-agent/pyproject.toml
@@ -12,26 +12,23 @@ packages = [{ include = "lm_agent" }]
 [tool.poetry.dependencies]
 python = "^3.12"
 httpx = "^0.28.1"
-PyJWT = "^2.4.0"
-pydantic = "^2.7"
-requests = "^2.32.5"
-tabulate = "^0.8.9"
-sentry-sdk = ">=1.3.1,<3.0.0"
-py-buzz = "^3.2.1"
-pydantic-settings = "^2.3.3"
+PyJWT = "^2.10.0"
+pydantic = "^2.12"
+sentry-sdk = "2.38.0"
+py-buzz = "^7.3.0"
+pydantic-settings = "^2.10.1"
 apscheduler = "3.10.4"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.10.1"
-pytest = "^6.2.4"
-pytest-asyncio = "^0.15.1"
-pytest-cov = "^2.12.1"
-pytest-env = "^0.6.2"
+mypy = "^1.18.1"
+pytest = "^8.2.0"
+pytest-asyncio = "^1.0.0"
+pytest-cov = "^7.0.0"
+pytest-env = "^1.0.0"
 respx = "^0.22.0"
-pytest-random-order = "^1.0.4"
-pytest-sugar = "^0.9.4"
-types-click = "^7.1.5"
-ruff = "^0.1.11"
+pytest-random-order = "^1.2.0"
+pytest-sugar = "^1.1.1"
+ruff = "^0.13.0"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
