--- a/lm-test/Makefile
+++ b/lm-test/Makefile
@@ -7,24 +7,22 @@ PACKAGE_NAME:=lm_test
 install:
 	poetry install
 
-.PHONY: lint
-lint: install
-	poetry run black --check ${PACKAGE_NAME}
-	poetry run isort --check ${PACKAGE_NAME}
-	poetry run pflake8 ${PACKAGE_NAME}
-
 .PHONY: mypy
 mypy: install
 	poetry run mypy ${PACKAGE_NAME} --pretty
 
-.PHONY: qa
-qa: lint mypy
-	echo "All quality checks pass!"
+.PHONY: lint
+lint: install
+	poetry run ruff check ${PACKAGE_NAME}
+	poetry run ruff format --check ${PACKAGE_NAME}
 
 .PHONY: format
 format: install
-	poetry run black ${PACKAGE_NAME}
-	poetry run isort ${PACKAGE_NAME}
+	poetry run ruff check --fix ${PACKAGE_NAME}
+	poetry run ruff format ${PACKAGE_NAME}
+.PHONY: qa
+qa: test mypy lint
+	echo "All quality checks pass!"
 
 .PHONY: clean
 clean:
