--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ line-length = 110
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B"]
+ignore = ["B008"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["lm_agent", "lm_api", "lm_cli", "lm_simulator_api", "lm-test"]
 
 [tool.ruff.format]
 quote-style = "double"
