Use ruff.toml instead of pyproject.toml

--- a/lm-agent/pyproject.toml
+++ b/lm-agent/pyproject.toml
@@ -47,6 +47,9 @@ env = [
     "LM_AGENT_LOG_LEVEL = DEBUG",
 ]
 
+[tool.ruff]
+extend = "../ruff.toml"
+
 [[tool.mypy.overrides]]
 module = [
     "buzz",
