--- a/ruff.toml
+++ b/ruff.toml
@@ -1,17 +1,16 @@
-[tool.ruff]
 line-length = 110
 
-[tool.ruff.lint]
+[lint]
 select = ["E", "F", "I", "B"]
 ignore = ["B008"]
 
-[tool.ruff.lint.isort]
+[lint.isort]
 known-first-party = ["lm_agent", "lm_api", "lm_cli", "lm_simulator_api", "lm-test"]
 
-[tool.ruff.format]
-quote-style = "double"
-
-[tool.ruff.lint.per-file-ignores]
+[lint.per-file-ignores]
 "lm-agent/tests/conftest.py" = ["E501"]
 "lm-agent/tests/workload_managers/slurm/test_reservations.py" = ["E501"]
 "lm-agent/tests/parsing/test_flexlm.py" = ["E501"]
+
+[format]
+quote-style = "double"
