--- a/lm-simulator-api/pyproject.toml
+++ b/lm-simulator-api/pyproject.toml
@@ -44,6 +44,9 @@ env = [
     "TEST_DATABASE_PORT: 5432"
 ]
 
+[tool.ruff]
+extend = "../ruff.toml"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
