--- a/lm-test/Makefile
+++ b/lm-test/Makefile
@@ -11,17 +11,18 @@ install:
 mypy: install
 	poetry run mypy ${PACKAGE_NAME} --pretty
 
-.PHONY: lint
-lint: install
+.PHONY: verify
+verify: install
 	poetry run ruff check ${PACKAGE_NAME}
 	poetry run ruff format --check ${PACKAGE_NAME}
 
-.PHONY: format
-format: install
+.PHONY: modify
+modify: install
 	poetry run ruff check --fix ${PACKAGE_NAME}
 	poetry run ruff format ${PACKAGE_NAME}
+
 .PHONY: qa
-qa: test mypy lint
+qa: test mypy verify
 	echo "All quality checks pass!"
 
 .PHONY: clean
