--- a/lm-agent/Makefile
+++ b/lm-agent/Makefile
@@ -17,18 +17,18 @@ test: install
 mypy: install
 	poetry run mypy ${PACKAGE_NAME} --pretty
 
-.PHONY: lint
-lint: install
+.PHONY: verify
+verify: install
 	poetry run ruff check tests ${PACKAGE_NAME}
 	poetry run ruff format --check tests ${PACKAGE_NAME}
 
-.PHONY: format
-format: install
+.PHONY: modify
+modify: install
 	poetry run ruff check --fix tests ${PACKAGE_NAME}
 	poetry run ruff format tests ${PACKAGE_NAME}
 
 .PHONY: qa
-qa: test mypy lint
+qa: test mypy verify
 	echo "All quality checks pass!"
 
 .PHONY: release-%
