--- a/lm-simulator-api/pyproject.toml
+++ b/lm-simulator-api/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-simulator-api"
-version = "4.5.0a0"
+version = "4.5.0"
 description = "Provides an API for interfacing with License Manager Simulator"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
